Wireframe - Created and styled all elements

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,42 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Wireframe/css/style.css">
   </head>
-  <body>
-    <!-- Add your HTML markup here -->
+  <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+  <body>
+    <header class="responsive-text">
+      <h1>Understanding Git</h1>
+    </header>
+    <main>
+      <img src="/Wireframe/images/GitGradient.jpg" alt="Image of an orange to red gradient background with a centred white Git logo" width="100%">
+      <p class="responsive-text">Git is a tool that helps people track and manage changes to files over time, like keeping a history of edits. It’s often used for coding projects, but can be applied to any type of files. Imagine working on a document and being able to go back to an earlier version, see who made changes, or work with others on the same project without accidentally overwriting each other’s work. Git helps with this by creating "snapshots" of the files at different stages, so changes are easy to manage and keep organised.</p>
+      <div class="flex-children">
+        <div class="article-children responsive-text">
+            <img src="/Wireframe/images/GitVCforeveryone.webp" alt="Illustration of 3 developers sending work to a Git logo to show how version control works in controlling snapshots of each submission" width="100%">
+            <h4>Benefits of version control</h4>
+            <p>Git is an important tool for version control because it allows users to efficiently track and manage changes in a project, whether working individually or in teams. It enables users to revert to earlier versions if needed and view the history of changes. Git's branching and merging features also make it easy for multiple collaborators to work on different parts of a project simultaneously without conflicts, making it essential for managing complex projects and ensuring smooth collaboration.</p>
+            <button class="button">Read more</button>
+        </div>
+
+        <div class="article-children responsive-text">
+            <img src="/Wireframe/images/what-is-git.webp" alt="Cartoon of 3 stick figures with different coloured sweaters all linked to a central Git logo in a thought cloud" width="100%">
+            <h4>The collaborative power of the developer community</h4>
+            <p>Git allows developers to create separate "branches" to work on different features or fixes independently. These branches can then be merged back into the main project when ready, avoiding conflicts or overwritten code. With Git, developers can easily review, share, and collaborate on code in real time, track each other’s contributions, and resolve issues through pull requests. This streamlines collaboration, boosts productivity, and ensures code quality across teams.</p>
+            <button class="button">Read more</button>
+          </div>
+    
+    </main>   
+<footer id="footer">
+  <div class="responsive-text">
+  <p>This page was created by Natalie Patel</p>
+    <p><a href="mailto:natcandy@gmail.com">Email natcandy@gmail.com</a></p>
+  </div>  
+</footer>
+    </body>
 </html
