Add label for size

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div>
-      <h2>T-Shirt Colour</h2>
+      <label for="color">T-Shirt Colour</label>
       <label for="red">
         <input type="radio" id="red" name="color" value="red" required> Red
       </label>
@@ -34,6 +34,19 @@
       <label for="green">
         <input type="radio" id="green" name="color" value="green" required> Green
       </label>
+    </div>
+
+    <div>
+    <label for="size">T-Shirt Size</label>
+    <select id="size" name="size" required>
+        <option value="" disabled selected>Select a size</option>
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+    </select>
     </div>
 
     <div>
