--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -51,7 +51,7 @@
 
     <div>
     <label for="date">Delivery Date</label>
-    <input type="date" name="date" id="date" required>
+    <input type="date" name="date" id="date" required min="2024-10-23" max="2024-11-19">
     </div>
     <button class="reset" type="reset">Reset</button>
     <button class="submit" type="submit">Submit</button>
