added color to the radio buttons

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -36,14 +36,14 @@
           <input id="red" type="radio" name="color" value="red" required />
           <label for="red">Red</label>
 
+          <input id="yellow" type="radio" name="color" value="yellow" />
+          <label for="yellow">Yellow</label>
+
           <input id="blue" type="radio" name="color" value="blue" />
           <label for="blue">Blue</label>
-
-          <input id="green" type="radio" name="color" value="green" />
-          <label for="green">Green</label>
         </div>
         <div class="dropdown">
-          <label for="size">Please select your size:</label>
+          <label for="size"><b>Please select your size:</b></label>
           <select id="size" name="size" required>
             <option value="" disabled selected>Here</option>
             <option value="XS">XS</option>
