added more semantic element

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -23,6 +23,12 @@
           the most widely used version control system in the world and is considered the modern standard for software
           development.
         </p>
+         <details>
+        <summary>
+          click for more details
+        </summary>
+        <p>Git is a distributed version control system that allows developers to track changes in files and coordinate work on software projects. Created by Linus Torvalds, Git provides powerful features for branching, merging, and collaboration. Its distributed nature enables each developer to have a complete copy of the project history, making it resilient and efficient for managing code across multiple environments</p>
+      </details>
         <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F"><button>Read More</button></a>
       
       </article>
@@ -33,19 +39,28 @@
       <article class="card">
       <img src="photos/features-of-git.jpg" class="photo-card">
       <h2>Why do developers need Git?</h2>
-      <p>
-Git helps developers be more efficient by eliminating the time and effort spent passing commits over a network connection. 
+      <p>Developers need Git to efficiently manage and track changes in their code, allowing for seamless collaboration, version control, and the ability to revert to previous states if necessary.</p>
+      <details>
+        <summary>
+          click for more details
+        </summary>
+        <p>Developers need Git to manage and track changes in their code efficiently. It provides a robust version control system that helps teams collaborate seamlessly, revert to previous versions if needed, and maintain a history of changes. Git also facilitates branching and merging, making it easier to develop features and fix bugs without disrupting the main project.</p>
+      </details>
 
-
-    </p>
+      
       <a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank"><button>Read More</button></a>
 
     </article>
     <article class="card">
       <img src="photos/branch2.png" class="photo-card">
       <h2>What is a branch in Git?</h2>
-      <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no
-      matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
+      <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
+      <details>
+        <summary>
+          click for more details
+        </summary>
+        <p>A branch in Git is a lightweight movable pointer that allows developers to work on different features or fixes in isolation. It enables parallel development, allowing multiple developers to collaborate without interfering with each other's work. Branches can be merged back into the main codebase once the features are complete and tested.</p>
+      </details>
       <a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank"><button>Read More</button></a>
 
     </article>
