added calendar input

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="container">
       <form id="form" class="form">
-        <h2>Please choose the size and color of your t-shirt</h2>
+        <h2>Please choose the size and color of your  T-shirt</h2>
         <div class="form-control">
           <label for="name" >User</label>
           <input type="text" id="username" placeholder="Enter Name" />
@@ -53,6 +53,10 @@
             <option value="XL">XL</option>
             <option value="XXL">XXL</option>
           </select>    
+        </div>
+        <div id="date">
+          <label for="delivery-date"><b>Please select your Delivery Date between the following 4 weeks.</b></label>
+          <input type="date" name="delivery-date" min="2024-11-18" max="2024-12-14">
         </div>
         <button>Submit</button>
       </form>
