settled the min characteres to the name input

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,8 +20,8 @@
       <form id="form" class="form">
         <h2>Please choose the size and color of your  T-shirt</h2>
         <div class="form-control">
-          <label for="name" >User</label>
-          <input type="text" id="username" placeholder="Enter Name" />
+          <label for="usarname" >User</label>
+          <input type="text" id="username" name="username" placeholder="Enter Username" minlength="2" required />
         </div>
         <div class="form-control">
           <label for="email" class="email">Email</label>
