--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
   </main>
   <footer>
     <!-- My name-->
-    <h2>By Natalie Patel</h2>
+    <h5>By Natalie Patel</h5>
   </footer>
 </body>
 
