created feature/wireframe branch and set up the html page and started to upload content and images

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GIT</title>
+</head>
+<body>
+  <header>
+          Getting to know your GIT
+  </header>
+  <main>
+    <section section class="section-one>
+      <img src="./img/git.png" alt="git photo">
+    </section>
+  </main>
 </body>
-</html
+</html>
