removed class sections and styled them in css

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,7 +10,7 @@
           Getting to know your GIT
   </header>
   <main>
-    <section section class="section-one>
+    <section>
       <img src="git.png" alt="git photo">
     <h2>
       What is Git?
@@ -22,7 +22,7 @@
       <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" class="btn"> To find more information</a>
     </button>
   </section>
-  <section class="section-two>
+  <section class="section">
        <img src="gitbranches.png" alt="image of a git flow diagram">
        <h2>Why do developers need Git?</h2>
        <p>Developers need Git to manage code changes, collaborate effectively, and revert to previous versions easily. It improves project organization and reduces conflicts, enhancing teamwork and streamlining the development process.
@@ -32,7 +32,7 @@
         <a href=" https://www.youtube.com/watch?v=9lfgB0vxYco" class="btn">To find more information:</a>
        </button>
   </section>
-  <section  class="section-three">
+  <section  class="section">
     <img src="featurebranch.jpeg" alt="image of git branch flow diagram">
     <h2>
       What is a branch in Git?
