removed the word coice on size label

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -35,7 +35,7 @@
           </div>
           <br />
           <div class="size">
-            <label for="size_choice">Choose a size.</label>
+            <label for="size">Choose a size.</label>
             <select name="size" id="size" required>
               <option value="select">Select a size</option>
               <option value="extra_small">XS</option>
