edited the opening button tag

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -40,8 +40,7 @@
     <p>
       A Git branch is a separate development line that lets developers work on features or fixes independently. It enables parallel tasks and can be merged back into the main branch for organization and collaboration.
     </p>
-    <button>
-      <a href="https://www.w3schools.com/git/git_branch.asp" class="btn">To find more information: </a>
+    <button<a href="https://www.w3schools.com/git/git_branch.asp" class="btn">To find more information: </a>
     </button>
   </section>
   </main>
