--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -21,7 +21,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Alireza Seifi Shalamzari</h2>
   </footer>
 </body>
 
