--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,8 +14,36 @@
   </header>
   <main>
     <form id="tshirt-order-form">
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+    
+      <!-- Name -->
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required pattern=".{2,}" title="Name must be at least 2 characters">
+
+    <!-- Email -->
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <!-- T-Shirt Color -->
+    <label for="color">T-Shirt Color:</label>
+    <select id="color" name="color" required>
+      <option value="">--Select a Color--</option>
+      <option value="red">Red</option>
+      <option value="blue">Blue</option>
+      <option value="green">Green</option>
+    </select>
+
+    <!-- T-Shirt Size -->
+    <label fr="size">T-Shirt Size:</label>
+    <select id="size" name="size" required>
+      <option value="">--Select a Size--</option>
+      <option value="XS">XS</option>
+      <option value="S">S</option>
+      <option value="M">M</option>
+      <option value="L">L</option>
+      <option value="XL">XL</option>
+      <option value="XXL">XXL</option>
+    </select>
+
   </form>
 
   </main>
