Correct the mistakes

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -33,7 +33,7 @@
     </select>
 
     <!-- T-Shirt Size -->
-    <label fr="size">T-Shirt Size:</label>
+    <label for="size">T-Shirt Size:</label>
     <select id="size" name="size" required>
       <option value="">--Select a Size--</option>
       <option value="XS">XS</option>
