Added final parts of form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,6 +44,12 @@
       <option value="XXL">XXL</option>
     </select>
 
+     <!-- Delivery Date -->
+     <label for="delivery-date">Delivery Date:</label>
+     <input type="date" id="delivery-date" name="delivery-date" required min="" max="">
+ 
+     <button type="submit">Submit Order</button>
+     
   </form>
 
   </main>
