correct my name

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -40,7 +40,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 Developer Info</p>
+        <p>© 2024 Amirhossein Aminian</p>
     </footer>
 
 </body>
