Added 3 colours, added submit button and left only one H1 element

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -32,16 +32,19 @@
         <label for="T-shirt color">Select your t-shirt colour:</label>
         <select id="T-shirt color" name="T-shirt color" required>
         <option value="" disabled selected>Select your colour</option>  
+        <option value="White">White</option>
+        <option value="Black">Black</option>
+        <option value="Grey">Grey</option>
         </select>
     </div>
-  
+    <button>Submit</button>
   
   </form>
 
   </main>
   <footer>
     <!-- My name-->
-    <h5>By Natalie Patel</h5>
+    <p>By Natalie Patel</p>
   </footer>
 </body>
 
