--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -24,6 +24,7 @@
         </article>
 
         <!-- Article 2 -->
+        <div id="article">
         <article>
             <h2>Why do Developers Need Git?</h2>
             <p>Git helps developers manage code versions, collaborate on projects, and track changes efficiently.</p>
@@ -36,6 +37,7 @@
             <p>A branch in Git is a pointer to a commit, allowing parallel development.</p>
             <a href="#">Read More</a>
         </article>
+        </div>
     </section>
 
     <!-- Footer -->
