--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,13 +16,13 @@
   <form id="order form t-shirt">
     <!-- name of customer-->
     <div class="form-group">
-      <label for="customer-name">Full name</label>
-      <input type="text" id="customer-name" name="customer-name" min="2" required>
+      <label for="name">Full name</label>
+      <input type="text" id="name" name="name" min="2" required>
     </div>
     <!-- customer email-->
      <div class="form-group">
-      <label for="customer-email">Email address</label>
-      <input type="email" id="customer-email" name="customer-email" required>
+      <label for="email">Email address</label>
+      <input type="email" id="email" name="email" required>
      </div>
      <!-- colors of t-shirts-->
       <div class="form-group">
