added img folder to <img tag and incoporated the css link

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GIT</title>
@@ -11,7 +12,8 @@
   </header>
   <main>
     <section>
-      <img src="git.png" alt="git photo">
+      <img src="./img/git.png" alt="git photo">
+    </section>
     <h2>
       What is Git?
     </h2>
@@ -21,9 +23,11 @@
     <button>
       <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" class="btn"> To find more information</a>
     </button>
-  </section>
-  <section class="section">
-       <img src="gitbranches.png" alt="image of a git flow diagram">
+  
+    <div class="section"></div>
+    <section>
+       <img src="./img/gitbranches.png" alt="image of a git flow diagram">
+       </section>
        <h2>Why do developers need Git?</h2>
        <p>Developers need Git to manage code changes, collaborate effectively, and revert to previous versions easily. It improves project organization and reduces conflicts, enhancing teamwork and streamlining the development process.
 
@@ -31,9 +35,8 @@
        <button>
         <a href=" https://www.youtube.com/watch?v=9lfgB0vxYco" class="btn">To find more information:</a>
        </button>
-  </section>
-  <section  class="section">
-    <img src="featurebranch.jpeg" alt="image of git branch flow diagram">
+      <div  class="section"></div>
+    <section><img src="./img/featurebranch.jpeg" alt="image of git branch flow diagram"></section>
     <h2>
       What is a branch in Git?
     </h2>
