added h1 tag to html header

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-          Getting to know your GIT
+          <h1>Getting to know your GIT</h1>
   </header>
   <main>
     <section>
