added classes first-photo, and div tag with class col-content. closing section tag deleted

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,8 +12,8 @@
   </header>
   <main>
     <section>
-      <img src="./img/git.png" alt="git photo">
-    </section>
+      <img class= "first-photo" src="./img/git.png" alt="git photo">
+    <div class="col-content">
     <h2>
       What is Git?
     </h2>
