applied class btn and removed it from the anchor tag. added a closing div and section tag. removed div class=section

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -20,12 +20,12 @@
     <p>
       Git is a version control system that helps developers manage and track changes in their code over time. It facilitates collaboration and allows users to revert to previous versions, making project organization and maintenance easier. Essentially, Git documents the evolution of a project.
     </p>
-    <button>
-      <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" class="btn"> To find more information</a>
+    <button class="btn">
+      <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F"> Click here to find more information</a>
     </button>
-  
-    <div class="section"></div>
-    <section>
+    </div>
+   </section>
+   
        <img src="./img/gitbranches.png" alt="image of a git flow diagram">
        </section>
        <h2>Why do developers need Git?</h2>
