--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -21,31 +21,40 @@
       Git is a version control system that helps developers manage and track changes in their code over time. It facilitates collaboration and allows users to revert to previous versions, making project organization and maintenance easier. Essentially, Git documents the evolution of a project.
     </p>
     <button class="btn">
-      <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F"> Click here to find more information</a>
+      <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F"> Click here for more information</a>
     </button>
     </div>
    </section>
-   
+
+     <section class="section-two">
+      <div class="col">
+
        <img src="./img/gitbranches.png" alt="image of a git flow diagram">
-       </section>
+       <div class="col-content">
        <h2>Why do developers need Git?</h2>
        <p>Developers need Git to manage code changes, collaborate effectively, and revert to previous versions easily. It improves project organization and reduces conflicts, enhancing teamwork and streamlining the development process.
 
        </p>
-       <button>
-        <a href=" https://www.youtube.com/watch?v=9lfgB0vxYco" class="btn">To find more information:</a>
+       <button class="btn">
+        <a href=" https://www.youtube.com/watch?v=9lfgB0vxYco">Click here for more information:</a>
        </button>
-      <div  class="section"></div>
-    <section><img src="./img/featurebranch.jpeg" alt="image of git branch flow diagram"></section>
-    <h2>
+       </div>
+       </div>
+      <div class="col">
+      <img src="./img/featurebranch.jpeg" alt="image of git branch flow diagram">
+      <div class="col-content">
+      <h2>
       What is a branch in Git?
     </h2>
     <p>
       A Git branch is a separate development line that lets developers work on features or fixes independently. It enables parallel tasks and can be merged back into the main branch for organization and collaboration.
     </p>
-    <button<a href="https://www.w3schools.com/git/git_branch.asp" class="btn">To find more information: </a>
+    <button class="btn">
+    <a href="https://www.w3schools.com/git/git_branch.asp" class="btn">To find more information: </a>
     </button>
-  </section>
+      </div>
+      </div>
+    </section>
   </main>
   <footer>
     <h4>
