--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <meta name="description" content="Get to know what is Git." />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta name="description" content="Get to know what is Git.">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
       <!-- What is Git? -->
       <section class="introduction">
         <figure>
-          <img src="images/GIT-datascientest.jpg" alt="git picture" />
+          <img src="images/GIT-datascientest.jpg" alt="git picture">
           <figcaption class="caption">
             <h2>What is Git?</h2>
             <p>
@@ -40,7 +40,7 @@
             src="images/git-benefits.png"
             alt="git benefits"
             class="benefits-pic"
-          />
+          >
           <figcaption class="caption">
             <h2>Why do developers need Git?</h2>
             <p>
@@ -60,7 +60,7 @@
             src="images/git-branch.png"
             alt="git branch"
             class="branch-pic"
-          />
+          >
           <figcaption class="caption">
             <h2>What is a branch in Git?</h2>
             <p>
