added figure tags

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -36,44 +36,43 @@
       <section class="two-blocks">
         <!-- Why do developers need Git? -->
         <article class="benefits">
-          <img
-            src="images/git-benefits.png"
-            alt="git benefits"
-            class="benefits-pic"
-          >
-          <figcaption class="caption">
-            <h2>Why do developers need Git?</h2>
-            <p>
-              One of the biggest advantages of Git is its branching
-              capabilities. Git branches are cheap and easy to merge. Feature
-              branches provide an isolated environment for every change to your
-              codebase.
-            </p>
-            <a href="https://www.atlassian.com/git/tutorials/why-git"
-              >Read More</a
+          <figure>
+            <img
+              src="images/git-benefits.png"
+              alt="git benefits"
+              class="benefits-pic"
             >
-          </figcaption>
+            <figcaption class="caption">
+              <h2>Why do developers need Git?</h2>
+              <p>
+                One of the biggest advantages of Git is its branching
+                capabilities. Git branches are cheap and easy to merge. Feature
+                branches provide an isolated environment for every change to your
+                codebase.
+              </p>
+              <a href="https://www.atlassian.com/git/tutorials/why-git">Read More</a>
+            </figcaption>
+          </figure>
         </article>
         <!-- What is a branch in Git? -->
         <article class="branch">
-          <img
-            src="images/git-branch.png"
-            alt="git branch"
-            class="branch-pic"
-          >
-          <figcaption class="caption">
-            <h2>What is a branch in Git?</h2>
-            <p>
-              Git branches are effectively a pointer to a snapshot of code
-              changes. When you want to add a new feature or fix a bug—no matter
-              how big or how small—you spawn a new branch to encapsulate your
-              changes.
-            </p>
-            <a
-              href="https://git-scm.com/book/en/v2/Git-Branching-Basic-Branching-and-Merging"
-              >Read More</a
+          <figure>
+            <img
+              src="images/git-branch.png"
+              alt="git branch"
+              class="branch-pic"
             >
-          </figcaption>
+            <figcaption class="caption">
+              <h2>What is a branch in Git?</h2>
+              <p>
+                Git branches are effectively a pointer to a snapshot of code
+                changes. When you want to add a new feature or fix a bug—no matter
+                how big or how small—you spawn a new branch to encapsulate your
+                changes.
+              </p>
+              <a href="https://git-scm.com/book/en/v2/Git-Branching-Basic-Branching-and-Merging">Read More</a>
+            </figcaption>
+          </figure>
         </article>
       </section>
     </main>
