changed id in line 57 and addded a class intead

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -54,7 +54,7 @@
             <option value="XXL">XXL</option>
           </select>    
         </div>
-        <div id="date">
+        <div class="form-delivery">
           <label for="delivery-date"><b>Please select your Delivery Date between the following 4 weeks.</b></label>
           <input type="date" name="delivery-date" min="2024-11-18" max="2024-12-14">
         </div>
