--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -40,8 +40,8 @@
                 <option value="XXL">XXL</option>
             </select>
             
-            <label for="deliveryDate">When do you want the t-shirt to be delivered?</label>
-            <input type="date" max="26/11/2024" id="deliveryDate" required>
+            <label for="deliveryDate">When do you want the t-shirt to be delivered?(within the next four weeks)</label>
+            <input type="date" min="today" id="deliveryDate" required>
             
             <button type="submit">Submit</button>
         </form>
