fixing date delivery

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -41,7 +41,7 @@
             </select>
             
             <label for="deliveryDate">When do you want the t-shirt to be delivered?(within the next four weeks)</label>
-            <input type="date" min="today" id="deliveryDate" required>
+            <input type="date" min="2024/10/26" max="2024/11/26" id="deliveryDate" required>
             
             <button type="submit">Submit</button>
         </form>
